# echo-service

./: Dockerfile  LICENSE  Makefile  README.md  compose.yml  docker-compose.yml  example.env  foo.db  mkdocs.yml  models.py  output.txt  prometheus.yml  pyproject.toml  service.py
docs/: architecture.md  configuration.md  deployment.md  flatten_codebase.py  flow.md  generate_docs.py  index.md  reference.md  troubleshooting.md
migrations/: 0001_create_jobs.sql
src/: amqp.py  client.py  clock.py  config.py  consumer.py  errors.py  ibs_client.py  log.py  logs.py  messages.py  models.py  producer.py  repo.py  rrule.py  schedulers.py
src/adapters/: database.py  db.py  message_broker.py
src/cmd/: __init__.py  consumer.py  shell.py
src/config/: log_config.py  logging_config.yml
src/consumers/: blocking_consumer.py
src/entry_points/: consumer.py  producer.py  test_ibs_client.py
src/message_brokers/: base.py  kafka.py  rabbitmq.py
src/scheduler/: __init__.py  dto.py  model.py  models.py  planner_strategy.py  repository.py  service.py  services.py
src/scheduler/domain/: rrule_builder.py  schedule.py  task.py  task_status.py
src/scheduler/strategies/: __init__.py  day.py  hour.py  jmonth.py  minute.py  month.py  second.py  week.py
src/scripts/: consumer.py  send_due_job.py  send_job.py  shell.py
src/task_scheduler/: service.py  services.py  task.py  task_status.py
src/task_scheduler/repository/: base.py  database.py  in_memory.py  postgres.py
src/task_scheduler/schedulers/: base.py  cron.py  jalali.py  jrrule.py  one_off.py  recurring.py
src/tasks/: repository.py  services.py  task.py
tests/: connection.md  test_scheduler.py
