[project]
name = "Scheduler-Service"
version = "0.1.0"
description = "An event driven scheduler service with a single responsibility on scheduling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.41",
]
